주석 일부 수정